Better date-time formatting

--- a/interfaces/Glitter/templates/include_modals.tmpl
+++ b/interfaces/Glitter/templates/include_modals.tmpl
@@ -219,12 +219,17 @@
                                 <label class="col-sm-5 control-label">$T('Glitter-dateFormat')</label>
                                 <div class="col-sm-4">
                                     <select name="general-date-format" class="form-control" data-bind="value: dateFormat">
-                                        <option value="dd-MM-yy">DD-MM-YY</option>
-                                        <option value="dd-MM-yyyy">DD-MM-YYYY</option>
-                                        <option value="MM/dd/yy">MM/DD/YY</option>
-                                        <option value="MM/dd/yyyy">MM/DD/YYYY</option>
-                                        <option value="yyyy-dd-MM">YYYY-DD-MM</option>
-                                        <option value="yyyy-MM-dd">YYYY-MM-DD</option>
+                                        <option value="DD/MM/YYYY HH:mm"></option>
+                                        <option value="DD/MM/YYYY h:mma"></option>
+                                        <option value="MM/DD/YYYY HH:mm"></option>
+                                        <option value="MM/DD/YYYY h:mma"></option>
+                                        <option value="YYYY-MM-DD HH:mm"></option>
+                                        <option value="YYYY-MM-DD h:mma"></option>
+                                        <option value="DD MMM YYYY HH:mm"></option>
+                                        <option value="DD MMM YYYY h:mma"></option>
+                                        <option value="MMM D YYYY HH:mm"></option>
+                                        <option value="MMM D YYYY h:mma"></option>
+                                        <option value="fromNow"></option>
                                     </select>
                                 </div>
                             </div>
