--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -384,7 +384,7 @@
                             <tr>
                                 <td class="table-messages-label">
                                     <span class="label" data-bind="css: 'label-' + css, text: type"></span>
-                                    <strong data-bind="text: date"></strong>
+                                    <strong data-bind="text: date, attr: { 'data-timestamp': timestamp }"></strong>
                                 </td>
                                 <td><span class="queue-message-text" data-bind="html: text"></span></td>
                             </tr>
@@ -392,10 +392,10 @@
                         <!-- /ko -->
                         <!-- ko foreach: allMessages -->
                             <tr>
-                                <td class="table-messages-label-no-date" colspan="2">
+                                <td class="table-messages-label">
                                     <span class="label" data-bind="css: 'label-' + css, text: type"></span>
-                                    <span class="queue-message-text" data-bind="html: text"></span>
                                 </td>
+                                <td><span class="queue-message-text" data-bind="html: text"></span></td>
                                 <td class="table-messages-remove">
                                     <!-- ko if: \$data.hasOwnProperty("clear") --><a href="#" data-bind="click: clear"  class="hoverbutton"><span class="glyphicon glyphicon-remove"></span></a><!-- /ko -->
                                 </td>
@@ -413,7 +413,7 @@
                             <th style="width: 25px;"></th>
                             <th></th>
                             <th class="status-header"></th>
-                            <th style="width: 108px;"></th>
+                            <th style="width: 130px;"></th>
                             <th style="width: 60px;"></th>
                         </tr>
                     </thead>
@@ -543,7 +543,7 @@
                                 <!-- /ko -->
                             </td>
                             <td class="status row-wrap-text" data-bind="text: statusText()"></td>
-                            <td class="history-completedon" data-bind="text: completedOn()"></td>
+                            <td class="history-completedon" data-bind="text: completedOn(), attr: { 'data-timestamp': completed }"></td>
                             <td class="delete">
                                 <div class="dropdown">
                                     <a href="#" data-toggle="dropdown" data-bind="click: updateAllHistoryInfo">
@@ -557,7 +557,7 @@
                                             </div>
                                             <div class="row">
                                                 <div class="col-sm-2">$T('post-Completed')</div>
-                                                <div class="col-sm-10" data-bind="text: completedOn"></div>
+                                                <div class="col-sm-10" data-bind="text: completedOn, attr: { 'data-timestamp': completed }"></div>
                                             </div>
                                             <div class="row">
                                                 <div class="col-sm-2">$T('status')</div>
@@ -635,6 +635,7 @@
         <!-- Make translations available in scripts -->
         <script type="text/javascript">
             var apiKey = "$session";
+            var displayLang = "$active_lang";
             var sabSpeedHistory = [$bytespersec_list];
             var newRelease = "$new_release";
             var newReleaseUrl = "$new_rel_url";
@@ -721,7 +722,7 @@
             <!--#include raw $webdir + "/static/javascripts/jquery-1.11.2.min.js"#-->
             <!--#include raw $webdir + "/static/javascripts/jquery-ui.min.js"#-->
             <!--#include raw $webdir + "/static/javascripts/jquery.peity.min.js"#-->
-            <!--#include raw $webdir + "/static/javascripts/jquery.dateFormat.min.js"#-->
+            <!--#include raw $webdir + "/static/javascripts/moment.js"#-->
             <!--#include raw $webdir + "/static/javascripts/knockout-latest.js"#-->
             <!--#include raw $webdir + "/static/javascripts/knockout-extensions.js"#-->
             <!--#include raw $webdir + "/static/bootstrap/js/bootstrap.min.js"#-->
