--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -545,7 +545,7 @@
                                 <!-- /ko -->
                             </td>
                             <td class="status row-wrap-text" data-bind="text: statusText()"></td>
-                            <td class="history-completedon" data-bind="text: completedOn(), attr: { 'data-timestamp': completed }"></td>
+                            <td class="history-completedon row-wrap-text" data-bind="text: completedOn(), attr: { 'data-timestamp': completed }"></td>
                             <td class="delete">
                                 <div class="dropdown">
                                     <a href="#" data-toggle="dropdown" data-bind="click: updateAllHistoryInfo">
