Adding Post age as extra column option

--- a/interfaces/Glitter/templates/include_modals.tmpl
+++ b/interfaces/Glitter/templates/include_modals.tmpl
@@ -245,6 +245,7 @@
                                         <option value="priority">$T('priority')</option>
                                         <option value="processing">$T('swtag-pp')</option>
                                         <option value="scripts">$T('eoq-scripts')</option>
+                                        <option value="age">$T('nzo-age')</option>
                                     </select>
                                 </div>
                             </div>
