Bugfix in Config save

--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -162,7 +162,7 @@
                 return false;
             });
 
-            \$('#fullform').ajaxForm({
+            \$('.fullform').ajaxForm({
                 datatype: 'json',
                 beforeSubmit: function () {
                     \$('.saveButton').each(function () {
