--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -124,7 +124,7 @@
 <!--#for $server in $servers#-->
     <!--#set $cur = $cur + 1#-->
 
-    <form action="saveServer" method="post" id="fullform" novalidate>
+    <form action="saveServer" method="post" class="fullform" novalidate>
     <input type="hidden" name="session" value="$session" />
     <input type="hidden" name="server" value="$server['name']" />
 
