--- a/interfaces/Config/templates/config_special.tmpl
+++ b/interfaces/Config/templates/config_special.tmpl
@@ -3,7 +3,7 @@
 <!--#include $webdir + "/_inc_header_uc.tmpl"#-->
 
 <div class="colmask">
-    <form action="saveSpecial" method="post" name="fullform" id="fullform">
+    <form action="saveSpecial" method="post" name="fullform" class="fullform">
     <input type="hidden" id="session" name="session" value="$session" />
     <div class="padTable">
         <h4 class="darkred nomargin">$T('explain-special')</h4>
