--- a/interfaces/Config/templates/config_sorting.tmpl
+++ b/interfaces/Config/templates/config_sorting.tmpl
@@ -3,7 +3,7 @@
 <!--#include $webdir + "/_inc_header_uc.tmpl"#-->
 
 <div class="colmask">
-    <form action="saveSorting" method="post" name="fullform" id="fullform">
+    <form action="saveSorting" method="post" name="fullform" class="fullform">
     <input type="hidden" id="session" name="session" value="$session" />
     <input id="complete_dir" type="hidden" value="$complete_dir" />
     <div class="section">
