--- a/interfaces/Config/templates/config_switches.tmpl
+++ b/interfaces/Config/templates/config_switches.tmpl
@@ -3,7 +3,7 @@
 <!--#include $webdir + "/_inc_header_uc.tmpl"#-->
 
 <div class="colmask">
-    <form action="saveSwitches" method="post" name="fullform" id="fullform">
+    <form action="saveSwitches" method="post" name="fullform" class="fullform">
     <input type="hidden" id="session" name="session" value="$session" />
     <div class="section">
         <div class="col2">
